# ChangeLog for dev-java/plexus-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2007; kiorky <kiorky@cryptelium.net> +plexus-utils-1.0.4.ebuild:
  Adding specific ebuilds beecause of maven wants it

  25 Apr 2007; kiorky <kiorky@cryptelium.net> plexus-utils-1.0.5.ebuild:
  Migrating to new maven eclass

  17 Apr 2007; kiorky <kiorky@cryptelium.net> plexus-utils-1.0.5.ebuild:
  correction keywords

  02 Mar 2007; kiorky <kiorky@cryptelium.net> +plexus-utils-1.0.5.ebuild,
  +files/build.xml-1.0.5.patch, +metadata.xml:
  Adding as i must do something else for now
      Will finnish later
      It s maven related stuff
